--- a/UpdateHTML.html
+++ b/UpdateHTML.html
@@ -22,59 +22,6 @@
       <div class="col-md-3">
         <div class="well">
           <h5>Select State:</h5>
-          <select id="selDataset">
-            <option value="alabama">Alabama</option>
-            <option value="alaska">Alaska</option>
-            <option value="Arizona">Arizona</option>
-            <option value="Arkansas">Arkansas</option>
-            <option value="California">California</option>
-            <option value="Colorado">Colorado</option>
-            <option value="Conneticut">Conneticut</option>
-            <option value="Delaware">Delaware</option>
-            <option value="Florida">Florida</option>
-            <option value="Georgia">Georgia</option>
-            <option value="Guam">Guam</option>
-            <option value="Idaho">Idaho</option>
-            <option value="Illinois">Illinois</option>
-            <option value="Indiana">Indiana</option>
-            <option value="Iowa">Iowa</option>
-            <option value="Kansas">Kansas</option>
-            <option value="Kentucky">Kentucky</option>
-            <option value="Louisiana">Louisiana</option>
-            <option value="Maine">Maine</option>
-            <option value="Maryland">Maryland</option>
-            <option value="Massachussetts">Massachusetts</option>
-            <option value="Michigan">Michigan</option>
-            <option value="Minnesota">Minnesota</option>
-            <option value="Mississippi">Mississippi</option>
-            <option value="Missouri">Missouri</option>
-            <option value="Montana">Montana</option>
-            <option value="Nebraska">Nebraska</option>
-            <option value="Nevada">Nevada</option>
-            <option value="New Hampshire">New Hampshire</option>
-            <option value="New Jersey">New Jersey</option>
-            <option value="New Mexico">New Mexico</option>
-            <option value="New York">New York</option>
-            <option value="North Carolina">North Carolina</option>
-            <option value="North Dakota">North Dakota</option>
-            <option value="Ohio">Ohio</option>
-            <option value="Oklahoma">Oklahoma</option>
-            <option value="Oregon">Oregon</option>
-            <option value="Pennsylvania">Pennsylvania</option>
-            <option value="Puerto Rico">Puerto Rico</option>
-            <option value="Rhode Island">Rhode Island</option>
-            <option value="South Carolina"> South Carolina</option>
-            <option value="South Dakota"> South Dakota</option>
-            <option value="Tennessee">Tennessee</option>
-            <option value="Texas">Texas</option>
-            <option value="Utah">Utah</option>
-            <option value="Vermont">Vermont</option>
-            <option value="Virgin Islands of the U.S.">Virgin Islands of the U.S.</option>
-            <option value="Virginia">Virginia</option>
-            <option value="Washington">Washington</option>
-            <option value="West Virginia">West Virginia</option>
-            <option value="Wisconsin">Wisconsin</option>
-            <option value="Wyoming">Wyoming</option>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="panel panel-primary">
@@ -108,10 +55,27 @@
   
 
   <script>
-    $(document).ready(function() {
-        $('')
+  const selectElement = document.getElementById("selDataset");
+    const cropOverviewElement = document.getElementById("sample-metadata");
 
-    });
+    for (const [key, value] of Object.entries(data.states)) {
+      selectElement.options.add(new Option(key, key));
+    }
+
+    function optionChanged(value) {
+      let stateData = data.states[value];
+
+      cropOverviewElement.innerHTML = 
+      `<div>Planted: ${stateData.planted}</div>
+      <div>Volunteer: ${stateData.volunteer}</div>
+      <div>Failed: ${stateData.failed}</div>
+      <div>Prevented: ${stateData.prevented}</div>
+      <div>Not Planted: ${stateData.not_planted}</div>
+      <div>Planted and Failed: ${stateData.planted_and_failed}</div>
+      <div>Farm Count: ${stateData.farm_count}</div>`;
+    }
+
+    optionChanged(selectElement.value);
   </script>
 </body>
 
