--- a/BackupHTML.html
+++ b/BackupHTML.html
@@ -50,7 +50,8 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="bower_components/jquery/jquery.js"></script>
   <script src="StateAcreage.js"></script>
-  
+  <script src="data.js"></script>
+  <script src="plots.js"></script> 
 
   <script>
   const selectElement = document.getElementById("selDataset");
