--- a/BackupHTML.html
+++ b/BackupHTML.html
@@ -48,9 +48,10 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="bower_components/jquery/jquery.js"></script>
   <script src="StateAcreage.js"></script>
-  
+  <script src="data.js"></script>
+  <script src="plots.js"></script>
+  <script src="Project3_Map.js"></script>
 
   <script>
   const selectElement = document.getElementById("selDataset");
