--- a/BackupHTML2.html
+++ b/BackupHTML2.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div id="bar"></div>
+        <div id="pie"></div>
       </div>
     </div>
     <div class="row">
