--- a/BackupHTML2.html
+++ b/BackupHTML2.html
@@ -52,6 +52,7 @@
   <script src="data.js"></script>
   <script src="plots.js"></script>
   <script src="Project3_Map.js"></script>
+  <script src="style.css"></script>
 
   <script>
   const selectElement = document.getElementById("selDataset");
