--- a/BackupHTML2.html
+++ b/BackupHTML2.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Agriculture Data Within the US Dashboard</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src=""></script>
+
 </head>
 
 <body>
@@ -41,7 +41,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div id="bubble"></div>
+        <div id="map"></div>
       </div>
     </div>
   </div>
@@ -51,7 +51,7 @@
   <script src="StateAcreage.js"></script>
   <script src="data.js"></script>
   <script src="plots.js"></script>
-  <script src="Project3_Map.js"></script>
+  <script src="Project3_Map2.js"></script>
   <script src="style.css"></script>
 
   <script>
