--- a/BackupHTML2.html
+++ b/BackupHTML2.html
@@ -32,7 +32,7 @@
           <div class="panel-heading">
             <h3 class="panel-title">Overview of Crop in Selected State</h3>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
+          <div id="state-metadata" class="panel-body"></div>
         </div>
       </div>
       <div class="col-md-4">
@@ -56,7 +56,7 @@
 
   <script>
   const selectElement = document.getElementById("selDataset");
-    const cropOverviewElement = document.getElementById("sample-metadata");
+    const cropOverviewElement = document.getElementById("state-metadata");
 
     for (const [key, value] of Object.entries(data.states)) {
       selectElement.options.add(new Option(key, key));
