--- a/index7.html
+++ b/index7.html
@@ -41,6 +41,18 @@
             <div class="well">
               <h4>State Selection:</h4>
               <select id="selDataset" onchange="optionChanged(this.value)"></select>
+ <!--              <select id="selDataset">
+                <option value="Connecticut">Connecticut</option>
+                <option value="Delaware">Delaware</option>
+                <option value="Maine">Maine</option>
+                <option value="Massachusetts">Massachusetts</option>
+                <option value="New_Hampshire">New_Hampshire</option>
+                <option value="New_Jersey">New_Jersey</option>
+                <option value="New_York">New_York</option>
+                <option value="Pennsylvania">Pennsylvania</option> 
+                <option value="Rhode_Island">Rhode_Island</option>
+                <option value="Vermont">Vermont</option>
+              </select> -->
             </div>
             <div class="panel">
             <p>Source: Farm Service Agency</p>
@@ -71,6 +83,7 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="data.js"></script>
     <script src="Project3_Map2.js"></script> 
+    <script src="plots.js"></script>
     <script src="pie_plots2.js"></script>
       
     </body>
