--- a/index7.html
+++ b/index7.html
@@ -83,7 +83,7 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="data.js"></script>
     <script src="Project3_Map2.js"></script> 
-    <script src="plots.js"></script>
+<!--    <script src="plots.js"></script>  -->
     <script src="pie_plots2.js"></script>
       
     </body>
