--- a/index7.html
+++ b/index7.html
@@ -40,8 +40,7 @@
           <div class="col-md-3">
             <div class="well">
               <h4>State Selection:</h4>
-              <select id="selDataset" onchange="optionChanged(this.value)"></select>
- <!--              <select id="selDataset">
+              <select id="selDataset">
                 <option value="Connecticut">Connecticut</option>
                 <option value="Delaware">Delaware</option>
                 <option value="Maine">Maine</option>
@@ -52,7 +51,7 @@
                 <option value="Pennsylvania">Pennsylvania</option> 
                 <option value="Rhode_Island">Rhode_Island</option>
                 <option value="Vermont">Vermont</option>
-              </select> -->
+              </select> 
             </div>
             <div class="panel">
             <p>Source: Farm Service Agency</p>
@@ -83,8 +82,8 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="data.js"></script>
     <script src="Project3_Map2.js"></script> 
-<!--    <script src="plots.js"></script>  -->
-    <script src="pie_plots2.js"></script>
+<!--    <script src="pie_plots2.js"></script>  -->
+    <script src="plots.js"></script>
       
     </body>
     
