--- a/index7.html
+++ b/index7.html
@@ -22,7 +22,6 @@
 </head>
 
     <body>
-
       <div class="container">
         <div class="row">
           <div class="Top">
@@ -37,38 +36,77 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="well">
               <h4>State Selection:</h4>
               <select id="selDataset">
-                <option value="Connecticut">Connecticut</option>
+                <option value="Alabama">Alabama</option>
+                <option value="Alaska">Alaska</option>
+                <option value="Arizona">Arizona</option>
+                <option value="Arkansas">Arkansas</option>
+                <option value="California">California</option>
+                <option value="Colorado">Colorado</option>
+                <option value="Connecticut">Connecticut</option> 
                 <option value="Delaware">Delaware</option>
+                <option value="Florida">Florida</option>
+                <option value="Georgia">Georgia</option>
+                <option value="Idaho">Idaho</option>
+                <option value="Illinois">Illinois</option>
+                <option value="Indiana">Indiana</option>
+                <option value="Iowa">Iowa</option>
+                <option value="Kansas">Kansas</option> 
+                <option value="Kentucky">Kentucky</option>
+                <option value="Louisiana">Louisiana</option>
                 <option value="Maine">Maine</option>
+                <option value="Maryland">Maryland</option>
                 <option value="Massachusetts">Massachusetts</option>
+                <option value="Michigan">Michigan</option>
+                <option value="Minnesota">Minnesota</option>
+                <option value="Mississippi">Mississippi</option>
+                <option value="Missouri">Missouri</option> 
+                <option value="Montana">Montana</option>
+                <option value="Nebraska">Nebraska</option>
+                <option value="Nevada">Nevada</option>
                 <option value="New_Hampshire">New_Hampshire</option>
                 <option value="New_Jersey">New_Jersey</option>
+                <option value="New_Mexico">New_Mexico</option>
                 <option value="New_York">New_York</option>
-                <option value="Pennsylvania">Pennsylvania</option> 
+                <option value="North_Carolina">North_Carolina</option>
+                <option value="North_Dakota">North_Dakota</option> 
+                <option value="Ohio">Ohio</option>
+                <option value="Oklahoma">Oklahoma</option>
+                <option value="Oregon">Oregon</option>
+                <option value="Pennsylvania">Pennsylvania</option>
+                <option value="Puerto_Rico">Puerto_Rico</option>
                 <option value="Rhode_Island">Rhode_Island</option>
+                <option value="South_Carolina">South_Carolina</option>
+                <option value="South_Dakota">South_Dakota</option>
+                <option value="Tennessee">Tennessee</option> 
+                <option value="Texas">Texas</option>
+                <option value="Utah">Utah</option>
                 <option value="Vermont">Vermont</option>
+                <option value="Virgin_Islands_of_the_US">Virgin_Islands_of_the_US</option>
+                <option value="Virginia">Virginia</option>
+                <option value="Washington">Washington</option>
+                <option value="West_Virginia">West_Virginia</option> 
+                <option value="Wisconsin">Wisconsin</option>
+                <option value="Wyoming">Wyoming</option>
               </select> 
             </div>
             <div class="panel">
             <p>Source: Farm Service Agency</p>
             <p>https://www.fsa.usda.gov/news-room/efoia/electronic-reading-room/frequently-requested-information/crop-acreage-data/index</p>
-            </div>
           </div>
-          <div class="col-md-9">
+          </div>
+          <div class="col-md-8">
             <div class="Title">
-          <h3>Planted Acres by Crop for the Selected Northeast State</h3>
+          <h2>Planted Acres by Crop for the Selected Northeast State</h2>
           <div class="col-md-9" style="border: 1px solid whitesmoke ">
             <div id="pie"></div>
         </div>
         <br>
         <div class="row">
-                    
-          <h3>Planted Acres for States in the Northeast</h3> 
-          <h4></p>(Bubble Size = state relative comparison of total planted acres among northeast states)</h4>
+
           <div class="col-md-14" style="border: 1px solid whitesmoke ">
             <div id="map"></div>
           </div>
@@ -80,7 +118,8 @@
     
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="data.js"></script>
+<!--    <script src="data.js"></script> -->
+    <script src="pie_data.js"></script>
     <script src="Project3_Map2.js"></script> 
 <!--    <script src="pie_plots2.js"></script>  -->
     <script src="plots.js"></script>
