--- a/index7.html
+++ b/index7.html
@@ -63,10 +63,10 @@
 
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script src="pie_data.js"></script>
-<script src="Project3_Map2.js"></script> 
-<script src="plots.js"></script>
-<script src="StateAcreage.js"></script>
+<script src="./pie_data.js"></script>
+<script src="./map_plot.js"></script> 
+<script src="./pie_plot.js"></script>
+<script src="./state_acreage.js"></script>
 
 
 <script>
