--- a/index7.html
+++ b/index7.html
@@ -22,6 +22,10 @@
 </head>
 
 <body>
+  <image src="images/usda.png" id="img1"></image>
+  <button onclick="func1()">FADE</button>
+  <script src="jquery.js" type="text/javascript"></script>
+  <script src="JQ.js" type="text/javascript"></script>
   <div class="container">
     <div class="row">
       <div class="Top">
@@ -63,10 +67,10 @@
 
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script src="./pie_data.js"></script>
+<script src="./data/json/pie_data.js"></script>
 <script src="./map_plot.js"></script> 
 <script src="./pie_plot.js"></script>
-<script src="./state_acreage.js"></script>
+<script src="./data/json/state_acreage.js"></script>
 
 
 <script>
